-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/src/mongo/db/query/plan_insert_listener.h:71: UNINIT_CTOR 134260 Class member declaration for "_lastEOFVersion".
/src/mongo/db/query/plan_insert_listener.h:57: UNINIT_CTOR 134260 Non-static class member "_lastEOFVersion" is not initialized in this constructor nor in any functions that it calls.