SERVER-71698 set default value for _lastEOFVersion