src/mongo/db/query/plan_insert_listener.h
@@ -68,7 +68,7 @@ public:
 
 private:
     std::shared_ptr<CappedInsertNotifier> _notifier;
-    uint64_t _lastEOFVersion;
+    uint64_t _lastEOFVersion = 0;
 };
 
 // Class used to notify listeners on majority committed point advancement events.
